--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A small game where a user chooses plants to grow, sell, and trade, getting better a better garden and plants over time.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "repository": {
     "type": "git",
@@ -18,8 +20,10 @@
   },
   "homepage": "https://github.com/Lmannumb/startup#readme",
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "give-me-a-joke": "^0.5.1",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0"
   },
